# ZamykAudio

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt  doc.md  license.txt  readme.md
CmdPlayer/: CMakeLists.txt  CmdPlayer.cpp
EffectExamples/AutoWahEffect/: parameters1.xml
EffectExamples/BitCrusherEffect/: parameters1.xml
EffectExamples/DelayEffect/: parameters1.xml
EffectExamples/DuckDelayEffect/: parameters1.xml
EffectExamples/DynamicsProcessorEffect/: parameters1.xml  parameters2.xml
EffectExamples/FilterEffect/: parameters1.xml  parameters2.xml
EffectExamples/FlangerEffect/: parameters1.xml
EffectExamples/LfoWahEffect/: parameters1.xml
EffectExamples/ParallelEffect/: parameters1.xml  parameters2.xml
EffectExamples/PhaserEffect/: parameters1.xml
EffectExamples/PingPongDelayEffect/: parameters1.xml
EffectExamples/PitchShiftEffect/: parameters1.xml  parameters3.xml
EffectExamples/ReverseDelayEffect/: parameters1.xml
EffectExamples/RobotEffect/: parameters1.xml
EffectExamples/SequenceFilterEffect/: parameters1.xml
EffectExamples/SerialEffect/: parameters1.xml
EffectExamples/Spatial2dEffect/: parameters1.xml
EffectExamples/StereoChorus/: parameters1.xml
EffectExamples/StereoFlanger/: parameters1.xml
EffectExamples/StereoPhaser/: parameters1.xml
EffectExamples/TremoloEffect/: parameters1.xml
EffectExamples/TubePreampEffect/: parameters1.xml
EffectExamples/VibratoEffect/: parameters1.xml
EffectExamples/VolumeControlEffect/: parameters1.xml
EffectExamples/WhisperEffect/: parameters1.xml
PortAudioIO/: CMakeLists.txt
PortAudioIO/include/: ZAudio_PortAudioIO.h
PortAudioIO/source/: ZAudio_PortAudioIO.cpp
ZAudio_FileIO/: CMakeLists.txt
ZAudio_FileIO/include/ZAudio/: FileIO.h
ZAudio_FileIO/source/: FileIO.cpp  stb_vorbis.c  stb_vorbis.cpp
ZAudio_SDL_IO/: CMakeLists.txt
ZAudio_SDL_IO/include/ZAudio/: SDL_IO.h
ZAudio_SDL_IO/source/: SDL_IO.cpp
ZamykAudio/: .clang-tidyno  CMakeLists.txt
ZamykAudio/include/ZAudio/: AnalogFilter.h  AudioDecoder.h  AudioDelay.h  AudioDetector.h  AudioEncoder.h  AudioEngine.h  AudioInput.h  AudioOutput.h  AutoWahEffect.h  BitCrusherEffect.h  BufferDecoder.h  BufferEncoder.h  BypassEffect.h  CallbackIO.h  CircularBuffer.h  CommonTypes.h  DelayEffect.h  DuckDelayEffect.h  DynamicsProcessorEffect.h  Effect.h  EffectSerializer.h  EffectsInclude.h  FFT.h  FIR_Filter.h  FilterEffect.h  FlangerEffect.h  FrameFormat.h  LfoWahEffect.h  LooperEffect.h  LowFrequencyOscillator.h  Math.h  ModulatedDelay.h  MonoToStereoAdapter.h  ParallelEffect.h  PhaseShifter.h  PhaseVocoder.h  PhaserEffect.h  PingPongDelayEffect.h  PitchShiftEffect.h  ReaderWriterQueue.h  (+25 more)
ZamykAudio/source/: AnalogFilter.cpp  AudioDecoder.cpp  AudioDelay.cpp  AudioDetector.cpp  AudioEncoder.cpp  AudioEngine.cpp  AutoWahEffect.cpp  BitCrusherEffect.cpp  BufferDecoder.cpp  BufferEncoder.cpp  BypassEffect.cpp  CallbackIO.cpp  DelayEffect.cpp  DuckDelayEffect.cpp  DynamicsProcessorEffect.cpp  EffectSerializer.cpp  FFT.cpp  FIR_Filter.cpp  FilterEffect.cpp  FlangerEffect.cpp  FrameFormat.cpp  LfoWahEffect.cpp  LooperEffect.cpp  LowFrequencyOscillator.cpp  Math.cpp  ModulatedDelay.cpp  MonoToStereoAdapter.cpp  ParallelEffect.cpp  PhaseShifter.cpp  PhaseVocoder.cpp  PhaserEffect.cpp  PingPongDelayEffect.cpp  PitchShiftEffect.cpp  ReverseDelayEffect.cpp  RobotEffect.cpp  SampleRateConversion.cpp  SequenceFilterEffect.cpp  SerialEffect.cpp  SimpleDelay.cpp  SoundBuffer.cpp  (+15 more)
examples/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  CircularBufferTests.h  CommonTypesTests.h  EffectsIOTests.h  MathTests.h  ReaderWriterQueueTests.h  StringToolsTests.h  Tests.cpp  TwoDimVectorTests.h
